--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -40,10 +40,11 @@ body {
   display: flex;
   align-items: center;
   font-weight: bold;
-  font-size: 1.3rem; }
+  font-size: 2rem;
+  font-family: Dongle; }
 
 .logo-img {
-  height: 28px;
+  height: 30px;
   margin-right: 0.5rem; }
 
 .nav-actions {
@@ -55,7 +56,9 @@ body {
   align-items: center;
   gap: 0.4rem;
   cursor: pointer;
-  transition: opacity 0.2s ease; }
+  transition: opacity 0.2s ease;
+  font-family: Dongle;
+  font-size: 1.4rem; }
 
 .nav-icon:hover {
   opacity: 0.85;
@@ -63,7 +66,9 @@ body {
 
 .wave-text {
   text-align: left;
-  margin-bottom: 6em; }
+  margin-bottom: 1.5em;
+  font-family: DoppioOne;
+  font-size: 3em; }
 
 .wave-text h1 {
   font-size: 2rem;
