--- a/src/styles/sass/_Gallery.scss
+++ b/src/styles/sass/_Gallery.scss
@@ -45,6 +45,31 @@
   background-color: #e68700;
 }
 
+/* --- TAGS --- */
+
+.tags-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 0.5rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  .tag-button {
+    background: #f3f3f3;
+    border: none;
+    border-radius: 20px;
+    padding: 0.3rem 0.8rem;
+    font-size: 0.9rem;
+    cursor: pointer;
+    transition: background 0.2s;
+  }
+}
+
+.tag-button:hover {
+  background: #dcdcdc;
+}
+
+
 /* --- GALERÍA TIPO MASONRY --- */
 .gallery-grid {
   column-count: 4;
