--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -123,7 +123,6 @@
   margin-top: 1rem;
   margin-bottom: 1rem; }
   .tags-container .tag-button {
-    background: #f3f3f3;
     border: none;
     border-radius: 20px;
     padding: 0.3rem 0.8rem;
@@ -132,7 +131,16 @@
     transition: background 0.2s; }
 
 .tag-button:hover {
-  background: #dcdcdc; }
+  background: #3b83f679;
+  border: none;
+  border-radius: 20px; }
+
+.tag-button.active {
+  background-color: #3b82f6;
+  /* azul */
+  color: white;
+  border: none;
+  border-radius: 20px; }
 
 /* --- GALERÍA TIPO MASONRY --- */
 .gallery-grid {
@@ -184,6 +192,8 @@
   gap: 4px;
   color: white;
   text-decoration: none; }
+  .icon-button .icon__heart {
+    cursor: pointer; }
 
 /* --- PAGINACIÓN --- */
 .pagination {
