--- a/src/styles/sass/_Gallery.scss
+++ b/src/styles/sass/_Gallery.scss
@@ -55,7 +55,6 @@
   margin-top: 1rem;
   margin-bottom: 1rem;
   .tag-button {
-    background: #f3f3f3;
     border: none;
     border-radius: 20px;
     padding: 0.3rem 0.8rem;
@@ -66,9 +65,17 @@
 }
 
 .tag-button:hover {
-  background: #dcdcdc;
+  background: #3b83f679;
+  border: none;
+  border-radius: 20px;
 }
 
+.tag-button.active {
+  background-color: #3b82f6; /* azul */
+  color: white;
+  border: none;
+  border-radius: 20px;
+}
 
 /* --- GALERÍA TIPO MASONRY --- */
 .gallery-grid {
@@ -134,6 +141,9 @@
   gap: 4px;
   color: white;
   text-decoration: none;
+  .icon__heart{
+    cursor: pointer;
+  }
 }
 
 /* --- PAGINACIÓN --- */
