--- a/src/styles/sass/_Favorites.scss
+++ b/src/styles/sass/_Favorites.scss
@@ -1,5 +1,3 @@
-/* ---------- ESTILO BASE ---------- */
-
 .favorites-container {
   padding: 2rem;
   max-width: 1440px;
@@ -46,7 +44,7 @@
   font-weight: 600;
   cursor: pointer;
   font-family: sans-serif;
-  padding-right: 30px; /* espacio para el ícono */
+  padding-right: 30px;
 }
 
 .filter-icon {
@@ -81,7 +79,6 @@
   display: block;
 }
 
-/* Versión móvil del header */
 @media (max-width: 768px) {
   .favorites-header {
     display: flex;
