style: gallery scss

--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -100,11 +100,11 @@
   transition: border-color 0.2s ease; }
 
 .search-bar input:focus {
-  border-color: #ff9900; }
+  border-color: #3ac6f2; }
 
 .search-bar button {
-  padding: 0 1rem;
-  background-color: #ff9900;
+  padding: 0.75rem 1rem;
+  background-color: #3ac6f2;
   color: white;
   border: none;
   border-radius: 0 999px 999px 0;
@@ -112,7 +112,7 @@
   transition: background-color 0.2s ease; }
 
 .search-bar button:hover {
-  background-color: #e68700; }
+  background-color: #027899; }
 
 /* --- TAGS --- */
 .tags-container {
@@ -126,10 +126,11 @@
 .tag-button {
   border: none;
   border-radius: 20px;
-  padding: 0.3rem 0.8rem;
-  font-size: 0.9rem;
+  padding: 0 0.8rem;
+  font-size: 1.7rem;
   cursor: pointer;
-  transition: background 0.2s; }
+  transition: background 0.2s;
+  font-family: Dongle; }
 
 .tag-button:hover {
   background: #3b83f679;
@@ -138,7 +139,6 @@
 
 .tag-button.active {
   background-color: #3b82f6;
-  /* azul */
   color: white;
   border: none;
   border-radius: 20px; }
@@ -284,7 +284,7 @@
   background-color: #ddd; }
 
 .pagination button.active {
-  background-color: #ff9900;
+  background-color: #3ac6f2;
   color: white;
   font-weight: bold; }
 
