--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -444,6 +444,9 @@
   cursor: pointer;
   z-index: 2; }
 
+.close-button:hover {
+  color: red; }
+
 .modal-photo-container {
   position: relative;
   flex: 1; }
@@ -514,6 +517,9 @@
   align-items: center;
   pointer-events: all; }
 
+.likes {
+  font-size: 1.2rem; }
+
 .photo-actions button,
 .photo-actions a {
   background: none;
@@ -521,6 +527,12 @@
   color: white;
   margin-left: 0.5rem;
   cursor: pointer; }
+
+.trash:hover {
+  color: red; }
+
+.download:hover {
+  color: #3ac6f2; }
 
 .modal-info {
   padding: 1rem;
